@@ -1,5 +1,5 @@
 /* Store current floating-point environment.
-   Copyright (C) 2000, 2003 Free Software Foundation, Inc.
+   Copyright (C) 2000, 2008 Free Software Foundation, Inc.
    This file is part of the GNU C Library.
    Contributed by Denis Joseph Barrow (djbarrow@de.ibm.com).
 
@@ -28,15 +28,7 @@
 int
 fegetenv (fenv_t *envp)
 {
-  /* The S/390 IEEE fpu doesn't keep track of the ieee instruction pointer.
-     To get around that the kernel will store the address of the last
-     fpu fault to the process structure. This ptrace call reads this value
-     from the kernel space. That means the ieee_instruction_pointer is
-     only correct after a fpu fault. That's the best we can do, there is
-     no way to find out the ieee instruction pointer if there was no fault.  */
   _FPU_GETCW (envp->fpc);
-  envp->ieee_instruction_pointer =
-    (void *) ptrace (PTRACE_PEEKUSER, getpid (), PT_IEEE_IP);
 
   /* Success.  */
   return 0;
